--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "base-64": "^0.1.0",
     "react": "16.7.0",
     "react-native": "0.58.4",
+    "react-native-animatable": "^1.3.2",
     "react-native-awesome-alerts": "^1.2.0",
     "react-native-barcode-scanner-google": "^1.4.2",
     "react-native-camera": "^1.12.0",
